# docsid

./: .env.local  .env.test  .gitignore  Makefile  README.md  compose.yml  entry.py  pyproject.toml  setup.cfg
.github/workflows/: python.yml
docker/postgres/: Dockerfile
docker/postgres/initdb/: 01.sql
docker/python/: Dockerfile
src/: example.py
