[tool.poetry]
name = "docsid"
version = "0.0.0"
description = "A software for document management"
authors = ["Colk-tech <master@colk.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
injector = "^0.21.0"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
python-dateutil = "^2.8.2"
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"
greenlet = "^3.0.0"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
pyproject-flake8 = "^6.1.0"
mypy = "^1.6.1"
types-python-dateutil = "^2.8.19.14"
pytest = "^7.4.2"
pytest-env = "^1.0.1"
mocker = "^1.1.1"
freezegun = "^1.2.2"
pytest-asyncio = "^0.21.1"
pytest-freezegun = "^0.4.2"
pytest-dotenv = "^0.5.2"
pytest-html = "^4.0.2"
pytest-cov = "^4.1.0"
pip-licenses = "^4.3.3"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_no_return = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
follow_imports = "skip"
exclude = "migrations"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
